[package]
name = "nihil-interpreter"
version = "0.1.0"
authors = ["Mesabloo <22964017+Mesabloo@users.noreply.github.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "runtime"
crate-type = ["dylib"]

[dependencies]
libc = "0.2.0"

[build-dependencies]
bindgen = "0.53.1"